# tgr-decomp

./: .gitattributes  .gitignore  .prettierignore  BRD3D.dll.c  BRD3D.dll.h  CMakeLists.txt  README.md  linux-i686-w64-mingw32.txt  meson.build  muon_fmt.ini  package.json  pyproject.toml  split-c.py  types-win32.h  types.h
boss-rally/: CMakeLists.txt  TODO.md  meson.build
boss-rally/BRD3D/: BRD3D.dll.c  BRD3D.rc  types-win32.h
boss-rally/BRD3D/split-win32/: BitDepthTo.c  BringWindowToFront.c  CalcColorSpaceValue.c  CalculateChecksum.c  CheckPreviousApp.c  Clamp0To2048.c  Clamp256.c  Clamp32768_FloorNeg128.c  CleanupName.c  CompareFunction.c  Convert24BitBitmap.c  ConvertBitmapIf24Bit.c  CountBits.c  CreateMinuteSecondsString.c  D3DEnumTextureFormatsCallback.c  DDCopyBitmap.c  DDrawCreateSurface.c  DestroyWindowWrapper.c  DestroyWindow_gUnk8C.c  Direct3D2EnumDevicesCallback.c  FCHK_FRead_0.c  GetDeviceIDirectDraw2_Released.c  LoadPod_0.c  MakeEnemyCarColorPanels.c  MakeEnemyCarColorPanels_0.c  PopCount.c  QsortCompareFunction.c  ReleaseD3D2_DDraw2_DDraw.c  RestoreDisplayMode.c  SafeReleaseDirect3DMaterial2.c  StartAddress.c  TIDFromTexture.c  TIDFromTextureAppend.c  UnregisterClass.c  basename.c  cleanUpAndExitWithCode.c  cos_.c  crt_SetCompatMode.c  d3d2enumDevicesCallback.c  d3dEnumTextureFormatsCallback.c  (+28 more)
boss-rally/BRD3D/split-win32/atomic/: atomic_sub_10004A10.c  atomic_sub_10004A50.c  atomic_sub_10004BB0.c  atomic_sub_10004BE0.c  atomic_sub_10004C20.c  atomic_sub_10005960.c  atomic_sub_10005CF0.c  atomic_sub_10005D40.c  atomic_sub_10005D90.c  atomic_sub_10005DE0.c  atomic_sub_10005E40.c  atomic_sub_10005E70.c  atomic_sub_10005F40.c  atomic_sub_10005F90.c  atomic_sub_10006090.c  atomic_sub_100060C0.c  atomic_sub_100060F0.c  atomic_sub_10074F70.c  atomic_sub_10074FC0.c
boss-rally/BRD3D/split-win32/car/: car_10024BF0.c  car_100370D0.c  car_1005B540.c  car_10060F70.c  car_10060FB0.c  car_10061000.c  car_10061210.c  car_10061290.c  car_100613B0.c  car_10061460.c  car_10061480.c  car_100615B0.c  car_10061620.c  car_LoadCarPaint.c  car_LoadImageWrapper.c  car_LoadPaintDamageBitmaps.c  car_MakeEnemyCarColorPanels.c  car_MakeEnemyCarColorPanels0.c
boss-rally/BRD3D/split-win32/chk/: CHK_AllocateMemory.c  CHK_FClose.c  CHK_FRead0.c  CHK_FReadOpen.c  CHK_FReadReportError.c  CHK_FileExists.c  CHK_GetFileSize.c  CHK_ReAllocateMemory0.c  CHK_ReAllocateMemory_0.c  CHK_ReadLine.c
boss-rally/BRD3D/split-win32/clamp/: ClampFloor32768Int.c  ClampFloor32Int.c
boss-rally/BRD3D/split-win32/clean/: cleanUpAndExitWithCode.c  cleanUpPod.c
boss-rally/BRD3D/split-win32/config/: config_10069A50.c  config_10069A60.c
boss-rally/BRD3D/split-win32/d/: DDrawCreateSurface.c  DDrawDoInit.c
boss-rally/BRD3D/split-win32/ddraw/: DDraw_DoInit.c  ddrawEnum.c  ddrawEnumerateCallback.c
boss-rally/BRD3D/split-win32/di/: DICreateEffects.c  DISetProperty.c  DISetProperty2.c  diEnumDevicesCallback.c
boss-rally/BRD3D/split-win32/enum/: enumModesCallback.c  enumTextureFormatsCallback.c  enumTextureFormatsSomething.c
boss-rally/BRally/: BRally.exe.c  BRally.exe.h  BRally.exe.idb  BRally.rc
boss-rally/Boot/: Boot.rc
boss-rally/BossRally/: BossRally.rc  CMakeLists.txt  README.md  decls.h  main.c  media-events.c  meson.build  playback.c  setup.c  sub_401230.c  video.c
boss-rally/Remove/: Remove.rc
boss-rally/SetVideo/: SetVideo.rc
(+7432 files in other folders)
